fix fond-soze in headerwrap h1 and UL

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ hr {
 #headerwrap h1 {
   margin-top: 60px;
   color: #00FFFF;
-  font-size: 75px;
+  font-size: calc(3em + 1vw);
   font-weight: 700;
   letter-spacing: 3px;
    
@@ -132,7 +132,7 @@ hr {
 
 #headerwrap ul {
   color: #00FFFF;
-  font-size: 50px;
+  font-size: calc(2em + 1vw);
   letter-spacing: 2px;
   text-transform: uppercase;
   list-style-type: none;
